Conrad/Array2DManipulation/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.11.jar;C:\Program Files (x86)\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files (x86)\BlueJ\lib\lang-stride.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;D:\Coding\Projects\Java\Array2DManipulation
-d
D:\Coding\Projects\Java\Array2DManipulation\doc
-encoding
UTF-8
-charset
UTF-8
D:\Coding\Projects\Java\Array2DManipulation\inputValidation.java
<---- end of javadoc command ---->
Loading source file D:\Coding\Projects\Java\Array2DManipulation\inputValidation.java...
D:\Coding\Projects\Java\Array2DManipulation\inputValidation.java:59: error: <identifier> expected
            }catch(f<Exception>){}
                               ^
1 error
